# graybat

./: .clang-format  .drone.yml  .travis.yml  BGL.hpp~  BGL_8hpp_source.html  BMPI_8hpp_source.html  Base_8hpp_source.html  BiStar_8hpp_source.html  CMakeLists.txt  Cage.hpp  Cage_8hpp_source.html  Chain_8hpp_source.html  Communicator.hpp  Communicator.hpp~  Consecutive_8hpp_source.html  EdgeLess_8hpp_source.html  Edge_8hpp_source.html  Event2.html  Filter_8hpp_source.html  FullyConnected_8hpp_source.html  Graph.hpp  Graph.hpp~  GraphPartition_8hpp_source.html  GridDiagonal_8hpp_source.html  Grid_8hpp_source.html  HyperCube_8hpp_source.html  InStar_8hpp_source.html  LICENSE.md  MPI.hpp  MPI.hpp~  Makefile  Makefile~  MinBMPI_8hpp_source.html  MyPage.html  MyPage.js  MySubPage.html  MySubPage1.html  MySubPage1.js  MySubPage2.html  MySubSubPage1.html  (+239 more)
cmake/: elegant-progressbarsConfigVersion.cmake
communicationPolicy/: BMPI.hpp  ZMQ.hpp
doc/html/: BGL_8hpp_source.html  BMPI_8hpp_source.html  Base_8hpp_source.html  BiStar_8hpp_source.html  Cage_8hpp_source.html  Chain_8hpp_source.html  Consecutive_8hpp_source.html  EdgeLess_8hpp_source.html  Edge_8hpp_source.html  Filter_8hpp_source.html  FullyConnected_8hpp_source.html  GraphPartition_8hpp_source.html  GridDiagonal_8hpp_source.html  Grid_8hpp_source.html  HyperCube_8hpp_source.html  InStar_8hpp_source.html  MinBMPI_8hpp_source.html  None_8hpp_source.html  OutStar_8hpp_source.html  Random_8hpp_source.html  Ring_8hpp_source.html  Roundrobin_8hpp_source.html  Vertex_8hpp_source.html  ZMQ_8hpp_source.html  annotated.html  anyrecv_8cpp-example.html  bmpi_2Config_8hpp_source.html  bmpi_2Context_8hpp_source.html  bmpi_2Event_8hpp_source.html  cage.html  cage.js  chain_8cpp-example.html  classes.html  classgraybat_1_1Cage-members.html  classgraybat_1_1communicationPolicy_1_1BMPI-members.html  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Context-members.html  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Context.html  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Context.js  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Event-members.html  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Event.html  (+197 more)
doc/latex/: annotated.tex  anyrecv_8cpp-example.tex  cage.tex  chain_8cpp-example.tex  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Context.tex  classgraybat_1_1communicationPolicy_1_1BMPI_1_1Event.tex  classgraybat_1_1communicationPolicy_1_1MinBMPI_1_1Context.tex  classgraybat_1_1communicationPolicy_1_1MinBMPI_1_1Event.tex  classgraybat_1_1communicationPolicy_1_1ZMQ_1_1Context.tex  classgraybat_1_1communicationPolicy_1_1ZMQ_1_1Event.tex  classgraybat_1_1communicationPolicy_1_1bmpi_1_1Context.tex  classgraybat_1_1communicationPolicy_1_1bmpi_1_1Event.tex  classgraybat_1_1communicationPolicy_1_1zmq_1_1Context.tex  classgraybat_1_1communicationPolicy_1_1zmq_1_1Event.tex  classgraybat_1_1graphPolicy_1_1BGL.tex  dir_4f04d9fda154cd6b90c925bbecf16225.tex  dir_50bda8fbc99656cb80fe7f4efb1e17a5.tex  dir_668de457229c1ed08f9a301fd9d56177.tex  dir_69a4a27beaff8a54b4bbd2d98c1bc00c.tex  dir_73d31a21f323f2b650efdf02d419d863.tex  dir_7456eefde0938d89697239234d64344f.tex  dir_8405dc8257f0a702718bd2e49a4fcd1b.tex  dir_99784da671f59b1c48e684edcf9e78fc.tex  dir_a58e0f5d77f72a68120279d1005dc917.tex  dir_ae904636f44655a4a72d036521d8bbf3.tex  dir_be40069b644e226b608cae9443c08911.tex  dir_bed05019f649d5aec8fc30479eb51cf3.tex  dir_caf00bc13ca51df4604282a9aa1b1bb0.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_ed3f8fa99ada5bb15f5f9ba5185b02d2.tex  examples.tex  forward_8cpp-example.tex  gol.tex  gol_8cc-example.tex  gol_8cpp-example.tex  hierarchy.tex  index.tex  refman.tex  ring_8cpp-example.tex  structCell.tex  (+45 more)
doc/xml/: BGL_8hpp.xml  BMPI_8hpp.xml  Base_8hpp.xml  BiStar_8hpp.xml  Cage_8hpp.xml  Chain_8hpp.xml  Consecutive_8hpp.xml  EdgeLess_8hpp.xml  Edge_8hpp.xml  Filter_8hpp.xml  FullyConnected_8hpp.xml  GraphPartition_8hpp.xml  GridDiagonal_8hpp.xml  Grid_8hpp.xml  HyperCube_8hpp.xml  InStar_8hpp.xml  MinBMPI_8hpp.xml  None_8hpp.xml  OutStar_8hpp.xml  Random_8hpp.xml  Ring_8hpp.xml  Roundrobin_8hpp.xml  Vertex_8hpp.xml  ZMQ_8hpp.xml  anyrecv_8cpp-example.xml  anyrecv_8cpp.xml  bmpi_2Config_8hpp.xml  bmpi_2Context_8hpp.xml  bmpi_2Event_8hpp.xml  cage.xml  cage_8dox.xml  chain_8cpp-example.xml  chain_8cpp.xml  (+109 more)
example/: anyrecv.cc  anyrecv.cpp  chain.cc  chain.cpp  forward.cc  forward.cpp  gol.cc  gol.cpp  pagerank.cpp  ring.cpp
examples/: progressbar_example.cpp
graphPolicy/: BGL.hpp
include/: BGL.hpp  BMPI.hpp  Cage.hpp  Cave.hpp  CommunicationAbstractionLayer.hpp  Communicator.hpp  Edge.hpp  Graph.hpp  GraphBasedVirtualOverlayNetwork.hpp  GraphCommunicator.hpp  MPI.hpp  MPI_deprecated.hpp  NameService.hpp  Vertex.hpp  VirtualOverlayNetwork.hpp  binaryOperation.hpp  distribution.hpp  evals.hpp  graybat.h  graybat.hpp  mapping.hpp  pattern.hpp  topology.hpp
include/elegant-progressbars/: CMakeLists.txt  README.md
include/elegant-progressbars/cmake/: CMakeCache.txt
include/elegant-progressbars/include/elegantProgressbars/: Time.hpp  all_policies.hpp  version.hpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  groups_0.js  groups_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js
src/: gather.cc  gen_rank_file.sh  gol.cc  golBench.cc  golFlex.cc  main.cc  nbody.cc  nbodyBench.cc  reduce.cc  synthetic.cc  synthetic_collective.cc  synthetic_one_lookup.cc  synthetic_random.cc  unit.cc  unit_cal.cc  unit_gvon.cc
test/: BMPIUT.cpp  CageUT.cpp  CommunicationPolicyUT.cpp  EdgeUT.cpp  UpdateUT.cpp  VertexUT.cpp  ZMQUT.cpp  utils.hpp
utils/: asio_signaling_server.cpp  signaling_server.cpp  zmq_env.sh  zmq_signaling_server.cc  zmq_signaling_server.cpp
(+151 files in other folders)
